test/commands/scan/pod-all-latest/out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- PASSED (POLICY=test, RULE=pod-no-latest, ID=webserver)
Done
