test/commands/scan/pod-all-latest/policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: test
spec:
  rules:
    - name: pod-no-latest
      context:
        - name: tag
          variable: latest
        - name: tag
          variable: (concat(':', $tag))
      match:
        any:
        - apiVersion: v1
          kind: Pod
      identifier: "metadata.name"  
      assert:
        all:
        - check:
            ~.(spec.containers[*].image):
              # an image tag is required
              (contains(@, ':')): true
              # using a mutable image tag e.g. 'latest' is not allowed
              (ends_with(@, $tag)): true
